--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <tbody>
                 <tr>
                     <td width="21%<article>">
-                        <img src="./figures/coming_soon.jpg" width="100%<article>">
+                        <img src="./figures/eccv20_detail.jpg" width="100%<article>">
                     </td>
                     <td align="left">
                         <ul>
@@ -149,11 +149,10 @@
                                 <p style="font-family:Helvetica">
                                     <i>European Conference on Computer Vision <b>(ECCV)</b>, 2020.</i>
                                 </p>
-                                <!--<p style="padding-top:10px">
-                                    [<a href="./docs/cvpr20_joint.pdf"><u>PDF</u></a>]&nbsp;
-                                    [<a href="./docs/cvpr20_joint_supp.pdf"><u>Supplemental Material</u></a>]&nbsp;
-                                    [Code (coming soon)]
-                                </p>-->
+                                <p style="padding-top:10px">
+                                    [<a href="https://arxiv.org/abs/2007.02374"><u>Paper</u></a>]&nbsp;
+                                    [<a href="https://github.com/XLechter/Detail-Preserved-Point-Cloud-Completion-via-SFA"><u>Code</u></a>]&nbsp;
+                                </p>
                             </li>
                         </ul>
                     </td>
@@ -182,7 +181,7 @@
                                     <i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2020.</i>
                                 </p>
                                 <p style="padding-top:10px">
-                                    [<a href="./docs/cvpr20_joint.pdf"><u>PDF</u></a>]&nbsp;
+                                    [<a href="./docs/cvpr20_joint.pdf"><u>Paper</u></a>]&nbsp;
                                     [<a href="./docs/cvpr20_joint_supp.pdf"><u>Supplemental Material</u></a>]&nbsp;
                                     [Code (coming soon)]
                                 </p>
@@ -214,7 +213,7 @@
                                     <i>Computer-Aided Geometric Design <b>(CAGD)</b>, 2020. (<a href="https://indico.oist.jp/event/10/">Proceedings of Geometric Modeling and Processing 2020</a>)</i>
                                 </p>
                                 <p style="padding-top:10px">
-                                    [<a href="./docs/gmp20_multistage.pdf"><u>PDF</u></a>]&nbsp;
+                                    [<a href="./docs/gmp20_multistage.pdf"><u>Paper</u></a>]&nbsp;
                                     [Code (coming soon)]
                                 </p>
                             </li>
@@ -245,7 +244,7 @@
                                     <i>Computer Graphics Forum <b>(CGF)</b>, 2019. (<a href="http://pg19.org/">Proceedings of Pacific Graphics 2019</a>)</i>
                                 </p>
                                 <p style="padding-top:10px">
-                                    [<a href="./docs/pg19_pyramid.pdf"><u>PDF</u></a>]&nbsp;
+                                    [<a href="./docs/pg19_pyramid.pdf"><u>Paper</u></a>]&nbsp;
                                     [<a href="https://github.com/Txusheng/PLC_"><u>Code</u></a>]
                                 </p>
                             </li>
@@ -276,7 +275,7 @@
                                     <i>Computer Graphics Forum <b>(CGF)</b>, 2019. (<a href="http://pg19.org/">Proceedings of Pacific Graphics 2019</a>)</i>
                                 </p>
                                 <p style="padding-top:10px">
-                                    [<a href="./docs/pg19_wavelet.pdf"><u>PDF</u></a>]
+                                    [<a href="./docs/pg19_wavelet.pdf"><u>Paper</u></a>]
                                 </p>
                             </li>
                         </ul>
@@ -302,7 +301,7 @@
                                     <i>The Visual Computer <b>(TVC)</b>, 2019. (<a href="http://www.cgs-network.org/cgi19/">Proceedings of Computer Graphics International 2019</a>)</i>
                                 </p>
                                 <p style="padding-top:10px">
-                                    [<a href="./docs/cgi19_joint.pdf"><u>PDF</u></a>]&nbsp;
+                                    [<a href="./docs/cgi19_joint.pdf"><u>Paper</u></a>]&nbsp;
                                     [<a href="./docs/cgi19_joint_supp.pdf"><u>Supplemental Material</u></a>]
                                 </p>
                             </li>
@@ -329,7 +328,7 @@
                                     <i>The Visual Computer <b>(TVC)</b>, 2019. (<a href="http://www.cgs-network.org/cgi19/">Proceedings of Computer Graphics International 2019</a>)</i>
                                 </p>
                                 <p style="padding-top:10px">
-                                    [<a href="./docs/cgi19_effective.pdf"><u>PDF</u></a>]&nbsp;
+                                    [<a href="./docs/cgi19_effective.pdf"><u>Paper</u></a>]&nbsp;
                                     [<a href="./docs/cgi19_effective_supp.pdf"><u>Supplemental Material</u></a>]
                                     [<a href="https://github.com/yanqingan/multiscale-deshadow"><u>Code</u></a>]
                                 </p>
@@ -357,7 +356,7 @@
                                     <i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2018.</i>
                                 </p>
                                 <p style="padding-top:10px">
-                                    [<a href="./docs/cvpr18_texture.pdf"><u>PDF</u></a>]&nbsp;
+                                    [<a href="./docs/cvpr18_texture.pdf"><u>Paper</u></a>]&nbsp;
                                     [<a href="https://github.com/fdp0525/G2LTex"><u>Code</u></a>]
                                 </p>
                             </li>
@@ -380,7 +379,7 @@
                                 <p style="font-family:Helvetica">Long Yang, <b>Qingan Yan</b>, Yanping Fu, Chunxia Xiao</p>
                                 <p style="font-family:Helvetica"><i>IEEE Transactions on Visualization and Computer Graphics <b>(TVCG)</b>, 2018.</i></p>
                                 <p style="padding-top:10px">
-                                    [<a href="./docs/tvcg17_surface.pdf"><u>PDF</u></a>]
+                                    [<a href="./docs/tvcg17_surface.pdf"><u>Paper</u></a>]
                                 </p>
                             </li>
                         </ul>
@@ -402,7 +401,7 @@
                                 <p style="font-family:Helvetica">Ling Zhang, <b>Qingan Yan</b>, Zheng Liu, Hua Zou, Chunxia Xiao</p>
                                 <p style="font-family:Helvetica"><i>IEEE Transactions on Image Processing <b>(TIP)</b>, 2017.</i></p>
                                 <p style="padding-top:10px">
-                                    [<a href="./docs/tip17_illumination.pdf"><u>PDF</u></a>]&nbsp;
+                                    [<a href="./docs/tip17_illumination.pdf"><u>Paper</u></a>]&nbsp;
                                     [<a href="https://github.com/yanqingan/Illumination_Decomposition"><u>Code</u></a>]
                                 </p>
                             </li>
@@ -425,7 +424,7 @@
                                 <p style="font-family:Helvetica"><b>Qingan Yan</b>, Long Yang, Ling Zhang, Chunxia Xiao</p>
                                 <p style="font-family:Helvetica"><i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2017. <b>(<a href="https://www.youtube.com/watch?v=eEfi6GsBBP8">Spotlight Oral</a>)</b></i></p>
                                 <p style="padding-top:10px">
-                                    [<a href="./docs/cvpr17_distinguishing.pdf"><u>PDF</u></a>]&nbsp;
+                                    [<a href="./docs/cvpr17_distinguishing.pdf"><u>Paper</u></a>]&nbsp;
                                     [<a href="https://github.com/yanqingan/SfM_Disambiguation"><u>Code</u></a>]
                                 </p>
                             </li>
@@ -448,7 +447,7 @@
                                 <p style="font-family:Helvetica">Long Yang, <b>Qingan Yan</b>, Chunxia Xiao</p>
                                 <p style="font-family:Helvetica"><i>The Visual Computer <b>(TVC)</b>, 2017.</i></p>
                                 <p style="padding-top:10px">
-                                    [<a href="./docs/tvc16_shape.pdf"><u>PDF</u></a>]
+                                    [<a href="./docs/tvc16_shape.pdf"><u>Paper</u></a>]
                                 </p>
                             </li>
                         </ul>
@@ -470,7 +469,7 @@
                                 <p style="font-family:Helvetica"><b>Qingan Yan</b>, Long Yang, Chao Liang, Huajun Liu, Ruimin Hu, Chunxia Xiao</p>
                                 <p style="font-family:Helvetica"><i>Computer Graphics Forum <b>(CGF)</b>, 2016. (<a href="https://indico.oist.jp/indico/event/0/">Proceedings of Pacific Graphics 2016</a>)</i></p>
                                 <p style="padding-top:10px">
-                                    [<a href="./docs/pg16_geometrically.pdf"><u>PDF</u></a>]
+                                    [<a href="./docs/pg16_geometrically.pdf"><u>Paper</u></a>]
                                 </p>
                             </li>
                         </ul>
@@ -492,7 +491,7 @@
                                 <p style="font-family:Helvetica"><b>Qingan Yan</b>, Zhan Xu, Chunxia Xiao</p>
                                 <p style="font-family:Helvetica"><i>Computer Graphics Forum <b>(CGF)</b>, 2014. (<a href="http://graphics.ewha.ac.kr/PG14/">Proceedings of Pacific Graphics 2014</a>)</i></p>
                                 <p style="padding-top:10px">
-                                    [<a href="./docs/pg14_fast.pdf"><u>PDF</u></a>]
+                                    [<a href="./docs/pg14_fast.pdf"><u>Paper</u></a>]
                                 </p>
                             </li>
                         </ul>
@@ -674,7 +673,7 @@
 
         <div id="footer">
             <div id="footer-text">
-                <p style="font-family:Helvetica">Last updated on Jun 17, 2020 by Qingan Yan.</p>
+                <p style="font-family:Helvetica">Last updated on Jul 08, 2020 by Qingan Yan.</p>
             </div>
         </div>
     </div>
