--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
                                     <p style="font-family:Helvetica"><b>[May 01, 2020]:</b> <i> Two papers are accepted to CGI 2020 and will be published in The Visual Computer.</i></p>
                                 </li>
                                 <li>
-                                    <p style="font-family:Helvetica"><b>[Feb 24, 2020]:</b> <i> Our work on joint geometry and texture optimization is accepted to CVPR 2020.</i></p>
+                                    <p style="font-family:Helvetica"><b>[Feb 24, 2020]:</b> <i> Our work on joint geometry and texture optimization is accepted to CVPR 2020, and the <a href="https://github.com/fdp0525/JointTG" rel="nofollow"><u>code</u></a> is also available.
+                                            Due to the agreement with other company, some parts can only be released in the form of .so files.</i></p>
                                 </li>
                                 <li>
                                     <p style="font-family:Helvetica"><b>[Feb 04, 2020]:</b> <i> One paper on point cloud completion is accepted to GMP 2020 and will be published in CAGD.</i></p>
@@ -102,7 +103,7 @@
                                 <li>
                                     <p style="font-family:Helvetica">
                                         <b>[Apr 01, 2018]:</b> <i>
-                                            Our paper on RGBD texture mapping is accepted to CVPR 2018
+                                            Our paper on RGBD texture mapping is accepted to CVPR 2018,
                                             and the <a href="https://github.com/fdp0525/G2LTex" rel="nofollow"><u>code</u></a> is also available.
                                             Due to the agreement with other company, some parts can only be released in the form of .so files.
                                         </i>
@@ -183,7 +184,7 @@
                                 <p style="padding-top:10px">
                                     [<a href="./docs/cvpr20_joint.pdf"><u>Paper</u></a>]&nbsp;
                                     [<a href="./docs/cvpr20_joint_supp.pdf"><u>Supplemental Material</u></a>]&nbsp;
-                                    [Code (coming soon)]
+                                    [<a href="https://github.com/fdp0525/JointTG"><u>Code</u></a>]
                                 </p>
                             </li>
                         </ul>
@@ -214,7 +215,6 @@
                                 </p>
                                 <p style="padding-top:10px">
                                     [<a href="./docs/gmp20_multistage.pdf"><u>Paper</u></a>]&nbsp;
-                                    [Code (coming soon)]
                                 </p>
                             </li>
                         </ul>
@@ -602,7 +602,7 @@
                                 WACV <a href="http://wacv2021.thecvf.com/home/">2021</a>,
                                 ACCV <a href="http://accv2020.kyoto/">2020</a>,
                                 CRV <a href="http://www.computerrobotvision.org/">2020</a>,
-                                AAAI <a href="https://aaai.org/Conferences/AAAI-20/">2020</a>,
+                                AAAI <a href="https://aaai.org/Conferences/AAAI-20/">2020</a>&amp;<a href="https://aaai.org/Conferences/AAAI-21/">2021</a>,
                                 EG <a href="https://conferences.eg.org/egev20/">2020</a>
                             </p>
                             <!--<ul>
@@ -673,7 +673,7 @@
 
         <div id="footer">
             <div id="footer-text">
-                <p style="font-family:Helvetica">Last updated on Jul 08, 2020 by Qingan Yan.</p>
+                <p style="font-family:Helvetica">Last updated on Sep 30, 2020 by Qingan Yan.</p>
             </div>
         </div>
     </div>
