--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
                                     <p style="font-family:Helvetica"><b>[May 01, 2020]:</b> <i> Two papers are accepted to CGI 2020 and will be published in The Visual Computer.</i></p>
                                 </li>
                                 <li>
-                                    <p style="font-family:Helvetica"><b>[Feb 24, 2020]:</b> <i> Our work on joint geometry and texture optimization is accepted to CVPR 2020, and the <a href="https://github.com/fdp0525/JointTG" rel="nofollow"><u>code</u></a> is also available.
+                                    <p style="font-family:Helvetica"><b>[Feb 24, 2020]:</b> <i> Our work on joint geometry and texture optimization is accepted to CVPR 2020, 
+                                        and the <a href="https://github.com/fdp0525/JointTG" rel="nofollow"><u>implementation</u></a> is also available.
                                             Due to the agreement with other company, some parts can only be released in the form of .so files.</i></p>
                                 </li>
                                 <li>
@@ -104,7 +105,7 @@
                                     <p style="font-family:Helvetica">
                                         <b>[Apr 01, 2018]:</b> <i>
                                             Our paper on RGBD texture mapping is accepted to CVPR 2018,
-                                            and the <a href="https://github.com/fdp0525/G2LTex" rel="nofollow"><u>code</u></a> is also available.
+                                            and the <a href="https://github.com/fdp0525/G2LTex" rel="nofollow"><u>implementation</u></a> is also available.
                                             Due to the agreement with other company, some parts can only be released in the form of .so files.
                                         </i>
                                     </p>
@@ -128,7 +129,7 @@
             </table>
         </div>
 
-        <h1 style="font-size:24px">Publications</h1>
+        <h1 style="font-size:24px">Selected Publications</h1>
 
         <table class="imgtable">
             <tbody>
@@ -184,7 +185,7 @@
                                 <p style="padding-top:10px">
                                     [<a href="./docs/cvpr20_joint.pdf"><u>Paper</u></a>]&nbsp;
                                     [<a href="./docs/cvpr20_joint_supp.pdf"><u>Supplemental Material</u></a>]&nbsp;
-                                    [<a href="https://github.com/fdp0525/JointTG"><u>Code</u></a>]
+                                    [<a href="https://github.com/fdp0525/JointTG"><u>Implementation</u></a>]
                                 </p>
                             </li>
                         </ul>
@@ -357,7 +358,7 @@
                                 </p>
                                 <p style="padding-top:10px">
                                     [<a href="./docs/cvpr18_texture.pdf"><u>Paper</u></a>]&nbsp;
-                                    [<a href="https://github.com/fdp0525/G2LTex"><u>Code</u></a>]
+                                    [<a href="https://github.com/fdp0525/G2LTex"><u>Implementation</u></a>]
                                 </p>
                             </li>
                         </ul>
@@ -596,7 +597,7 @@
                                 </li>
                             </ul>-->
                             <p style="font-family:Helvetica"><b>Conference Reviewer:</b>
-                                CVPR <a href="http://cvpr2019.thecvf.com/">2019</a>&amp;<a href="http://cvpr2020.thecvf.com/">2020</a>,
+                                CVPR <a href="http://cvpr2019.thecvf.com/">2019</a>&amp;<a href="http://cvpr2020.thecvf.com/">2020</a>&amp;<a href="http://cvpr2021.thecvf.com/">2021</a>,
                                 ICCV <a href="http://iccv2019.thecvf.com/">2019</a>,
                                 ECCV <a href="https://eccv2020.eu/">2020</a>,
                                 WACV <a href="http://wacv2021.thecvf.com/home/">2021</a>,
