--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <span style="font-family:Helvetica">
                                 <b>
                                     Research Scientist
-                                    <br>Silicon Valley Research Center, JD.com American
+                                    <br>InnoPeak Technology
                                     <br>
                                 </b>
                             </span>
@@ -36,15 +36,17 @@
                         <p>
                             <span style="font-family:Helvetica">
                                 <b>Email:</b> yanqinganssg <i>at</i> gmail <i>dot</i> com<br>
-                                <b>Office:</b> 675E Middlefield Rd, Mountain View, CA, 94043<br>
+                                <b>Office:</b> 2479 E Bayshore Rd #110, Palo Alto, CA 94303<br>
                                 <b>Links:</b> <a href="https://github.com/yanqingan">GitHub</a> |
                                 <a href="https://www.linkedin.com/in/yanqingan">LinkedIn</a>
                                 <br>
                             </span>
                         </p>
+                        <!--
                         <p style="padding-top:8px">
                             [<a href="./docs/cv_qay.pdf"><u>Curriculum Vitae</u></a>]
                         </p>
+                        -->
                     </td>
                 </tr>
             </tbody>
@@ -56,14 +58,13 @@
                 <tr>
                     <td>
                         <p style="font-family:Helvetica">
-                            I am a research scientist at JD.com Silicon Valley Research Center in Mountain View, CA.
+                            I am a staff research scientist at <a href="https://www.innopeaktech.com/">InnoPeak Technology</a> (a.k.a., OPPO US Research Center), focusing on XR related projects. 
+                            From 2017 to 2021, I served as a research scientist at <a href="https://corporate.jd.com/">JD.com American Technologies</a> in Mountain View, CA,.
                             Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017.
-                            In JD, I work on 3D related projects, mainly involved in <i>virtual fitting, efficient geometry acquisition and texture optimization</i>.
                         </p>
                         <p style="font-family:Helvetica">
-                            My interests primarily focus on the field of Computer Vision and Graphics.
-                            In particular, I tackle the challenges in <i>structure from motion, multi-view stereo, RGB-D fusion, depth estimation, image synthesis and visual correspondence</i>.
-                            I am also interested in data-driven 3D object analysis, such as <i>geometric scene perception, template-based shape recovery and unstructured data representation</i>.
+                            My interests primarily focus on the field of 3D Computer Vision and Graphics.
+                            In particular, I tackle the challenges in neural 3D Reconstruction, including structure from motion, SLAM, RGB-D fusion, depth estimation and view synthesis.
                         </p>
                     </td>
                 </tr>
@@ -78,6 +79,12 @@
                     <tr>
                         <td align="left">
                             <ul>
+                                <li>
+                                    <p style="font-family:Helvetica"><b>[Mar 01, 2022]:</b> <i> A paper is accepted to CVPR 2022.</i></p>
+                                </li>
+                                <li>
+                                    <p style="font-family:Helvetica"><b>[Feb 01, 2021]:</b> <i> Start a new journey at InnoPeak Technology.</i></p>
+                                </li>
                                 <li>
                                     <p style="font-family:Helvetica"><b>[Jul 02, 2020]:</b> <i> One papers is accepted to ECCV 2020.</i></p>
                                 </li>
@@ -130,6 +137,36 @@
         </div>
 
         <h1 style="font-size:24px">Selected Publications</h1>
+
+        <table class="imgtable">
+            <tbody>
+                <tr>
+                    <td width="21%<article>">
+                        <img src="./figures/cvpr22_plane.jpg" width="100%<article>">
+                    </td>
+                    <td align="left">
+                        <ul>
+                            <li>
+                                <h3 style="font-family:Helvetica">
+                                    <b>
+                                        PlaneMVS: 3D Plane Reconstruction from Multi-View Stereo
+                                    </b>
+                                </h3>
+                                <p style="font-family:Helvetica">
+                                    Jiachen Liu, Pan Ji, Nitin Bansal, Changjiang Cai, <b>Qingan Yan</b>, Xiaolei Huang, Yi Xu
+                                </p>
+                                <p style="font-family:Helvetica">
+                                    <i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2022.</i>
+                                </p>
+                                <p style="padding-top:10px">
+                                    [<a href="https://arxiv.org/abs/2203.12082"><u>Paper</u></a>]&nbsp;
+                                </p>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
 
         <table class="imgtable">
             <tbody>
@@ -563,8 +600,6 @@
                                 <a href="https://mc.manuscriptcentral.com/tcsvt">TCSVT</a>,
                                 <a href="https://mc.manuscriptcentral.com/cyb-ieee">TCYB</a>,
                                 <a href="https://ees.elsevier.com/neucom/default.asp">Neurocomputing</a>,
-                                <a href="https://jars.msubmit.net/cgi-bin/main.plex?form_type=home">JARS</a>,
-                                <a href="https://jei.msubmit.net/cgi-bin/main.plex?form_type=home">JEI</a>,
                                 <a href="https://mc.manuscriptcentral.com/cpe">CPE</a>
                             </p>
                             <!--<ul>
@@ -597,14 +632,15 @@
                                 </li>
                             </ul>-->
                             <p style="font-family:Helvetica"><b>Conference Reviewer:</b>
-                                CVPR <a href="http://cvpr2019.thecvf.com/">2019</a>&amp;<a href="http://cvpr2020.thecvf.com/">2020</a>&amp;<a href="http://cvpr2021.thecvf.com/">2021</a>,
-                                ICCV <a href="http://iccv2019.thecvf.com/">2019</a>,
-                                ECCV <a href="https://eccv2020.eu/">2020</a>,
-                                WACV <a href="http://wacv2021.thecvf.com/home/">2021</a>,
-                                ACCV <a href="http://accv2020.kyoto/">2020</a>,
-                                CRV <a href="http://www.computerrobotvision.org/">2020</a>,
-                                AAAI <a href="https://aaai.org/Conferences/AAAI-20/">2020</a>&amp;<a href="https://aaai.org/Conferences/AAAI-21/">2021</a>,
-                                EG <a href="https://conferences.eg.org/egev20/">2020</a>
+                                CVPR,
+                                ICCV,
+                                ECCV,
+                                WACV,
+                                ACCV,
+                                3DV,
+                                CRV,
+                                AAAI,
+                                EG
                             </p>
                             <!--<ul>
                                 <li>
@@ -674,7 +710,7 @@
 
         <div id="footer">
             <div id="footer-text">
-                <p style="font-family:Helvetica">Last updated on Sep 30, 2020 by Qingan Yan.</p>
+                <p style="font-family:Helvetica">Last updated on Jun 06, 2022 by Qingan Yan.</p>
             </div>
         </div>
     </div>
