--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <td>
                         <p style="font-family:Helvetica">
                             I am a staff research scientist at <a href="https://www.innopeaktech.com/">InnoPeak Technology</a> (a.k.a., OPPO US Research Center), focusing on XR related projects. 
-                            From 2017 to 2021, I served as a research scientist at <a href="https://corporate.jd.com/">JD.com American Technologies</a> in Mountain View, CA,.
+                            From 2017 to 2021, I served as a research scientist at <a href="https://corporate.jd.com/">JD.com American Technologies</a> in Mountain View, CA.
                             Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017.
                         </p>
                         <p style="font-family:Helvetica">
