--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         </p>
                         <p style="font-family:Helvetica">
                             My interests primarily focus on the field of 3D Computer Vision and Graphics.
-                            In particular, I tackle the challenges in neural 3D Reconstruction, including structure from motion, SLAM, RGB-D fusion, depth estimation and view synthesis.
+                            In particular, I tackle the challenges in Neural Scene Reconstruction and Understanding, including structure from motion, SLAM, RGB-D fusion, depth estimation, semantic segmentation and view synthesis.
                         </p>
                     </td>
                 </tr>
@@ -89,24 +89,12 @@
                                     <p style="font-family:Helvetica"><b>[Jul 02, 2020]:</b> <i> One papers is accepted to ECCV 2020.</i></p>
                                 </li>
                                 <li>
-                                    <p style="font-family:Helvetica"><b>[Jun 28, 2020]:</b> <i> Two papers is accepted to CASA 2020 and will be published in Computer Animation and Virtual Worlds.</i></p>
-                                </li>
-                                <li>
-                                    <p style="font-family:Helvetica"><b>[May 01, 2020]:</b> <i> Two papers are accepted to CGI 2020 and will be published in The Visual Computer.</i></p>
-                                </li>
-                                <li>
                                     <p style="font-family:Helvetica"><b>[Feb 24, 2020]:</b> <i> Our work on joint geometry and texture optimization is accepted to CVPR 2020, 
                                         and the <a href="https://github.com/fdp0525/JointTG" rel="nofollow"><u>implementation</u></a> is also available.
                                             Due to the agreement with other company, some parts can only be released in the form of .so files.</i></p>
                                 </li>
                                 <li>
-                                    <p style="font-family:Helvetica"><b>[Feb 04, 2020]:</b> <i> One paper on point cloud completion is accepted to GMP 2020 and will be published in CAGD.</i></p>
-                                </li>
-                                <li>
                                     <p style="font-family:Helvetica"><b>[Jul 25, 2019]:</b> <i> Two papers are accepted to PG 2019 and will be published in CGF.</i></p>
-                                </li>
-                                <li>
-                                    <p style="font-family:Helvetica"><b>[Mar 15, 2019]:</b> <i> Two papers are accepted to CGI 2019 and will be published in The Visual Computer.</i></p>
                                 </li>
                                 <li>
                                     <p style="font-family:Helvetica">
@@ -124,10 +112,13 @@
                                     <p style="font-family:Helvetica"><b>[Jun 30, 2017]:</b> <i>I finished my PhD studying at Wuhan University.</i></p>
                                 </li>
                                 <li>
-                                    <p style="font-family:Helvetica"><b>[May 30, 2017]:</b> <i>The paper on illumination editing is accepted to IEEE Transactions on Image Processing.</i></p>
+                                    <p style="font-family:Helvetica"><b>[Apr 15, 2017]:</b> <i>One paper is accepted to CVPR 2017.</i></p>
                                 </li>
                                 <li>
-                                    <p style="font-family:Helvetica"><b>[Apr 15, 2017]:</b> <i>Our work on structure-from-motion disambiguation is accepted to CVPR 2017.</i></p>
+                                    <p style="font-family:Helvetica"><b>[Jul 20, 2016]:</b> <i>One paper is accepted to PG 2016 and will be published in CGF.</i></p>
+                                </li>
+                                <li>
+                                    <p style="font-family:Helvetica"><b>[Aug 01, 2014]:</b> <i>One paper is accepted to PG 2014 and will be published in CGF.</i></p>
                                 </li>
                             </ul>
                         </td>
@@ -160,6 +151,68 @@
                                 </p>
                                 <p style="padding-top:10px">
                                     [<a href="https://arxiv.org/abs/2203.12082"><u>Paper</u></a>]&nbsp;
+                                </p>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <table class="imgtable">
+            <tbody>
+                <tr>
+                    <td width="21%<article>">
+                        <img src="./figures/tvcg22_rank.jpg" width="100%<article>">
+                    </td>
+                    <td align="left">
+                        <ul>
+                            <li>
+                                <h3 style="font-family:Helvetica">
+                                    <b>
+                                        Rank-PointRetrieval: Reranking Point Cloud Retrieval via a Visually Consistent Registration Evaluation
+                                    </b>
+                                </h3>
+                                <p style="font-family:Helvetica">
+                                    Wenxiao Zhang, Huajian Zhou, Zhen Dong, <b>Qingan Yan</b>, Chunxia Xiao
+                                </p>
+                                <p style="font-family:Helvetica">
+                                    <i>IEEE Transactions on Visualization and Computer Graphics <b>(TVCG)</b>, 2022.</i>
+                                </p>
+                                <p style="padding-top:10px">
+                                    [<a href="https://ieeexplore.ieee.org/document/9764639"><u>Paper</u></a>]&nbsp;
+                                    [<a href="https://github.com/XLechter/Rank-PointRetrieval"><u>Code</u></a>]
+                                </p>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <table class="imgtable">
+            <tbody>
+                <tr>
+                    <td width="21%<article>">
+                        <img src="./figures/tvcg21_seamless.jpg" width="100%<article>">
+                    </td>
+                    <td align="left">
+                        <ul>
+                            <li>
+                                <h3 style="font-family:Helvetica">
+                                    <b>
+                                        Seamless Texture Optimization for RGB-D Reconstruction
+                                    </b>
+                                </h3>
+                                <p style="font-family:Helvetica">
+                                    Yanping Fu, <b>Qingan Yan</b>, Jie Liao, Huajian Zhou, Jin Tang, Chunxia Xiao
+                                </p>
+                                <p style="font-family:Helvetica">
+                                    <i>IEEE Transactions on Visualization and Computer Graphics <b>(TVCG)</b>, 2021.</i>
+                                </p>
+                                <p style="padding-top:10px">
+                                    [<a href="https://ieeexplore.ieee.org/abstract/document/9645189"><u>Paper</u></a>]&nbsp;
+                                    [<a href="https://github.com/fdp0525/SeamlessTex"><u>Code</u></a>]
                                 </p>
                             </li>
                         </ul>
