--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <td>
                         <p style="font-family:Helvetica">
                             I am a staff research scientist at <a href="https://www.innopeaktech.com/">InnoPeak Technology</a> (a.k.a., OPPO US Research Center), focusing on XR related projects. 
-                            From 2017 to 2021, I served as a research scientist at <a href="https://corporate.jd.com/">JD.com American Technologies</a> in Mountain View, CA.
+                            From 2017 to 2021, I served as a senior research scientist at <a href="https://corporate.jd.com/">JD.com American Technologies</a> in Mountain View, CA.
                             Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017.
                         </p>
                         <p style="font-family:Helvetica">
@@ -79,6 +79,9 @@
                     <tr>
                         <td align="left">
                             <ul>
+                                <li>
+                                    <p style="font-family:Helvetica"><b>[Jul 03, 2022]:</b> <i> A paper is accepted to ECCV 2022.</i></p>
+                                </li>
                                 <li>
                                     <p style="font-family:Helvetica"><b>[Mar 01, 2022]:</b> <i> A paper is accepted to CVPR 2022.</i></p>
                                 </li>
@@ -106,11 +109,11 @@
                                     </p>
                                 </li>
                                 <li>
-                                    <p style="font-family:Helvetica"><b>[Nov 01, 2017]:</b> <i>I joined JD.com Silicon Valley Research Center as a research scientist.</i></p>
+                                    <p style="font-family:Helvetica"><b>[Nov 01, 2017]:</b> <i>I joined JD.com Silicon Valley Research Center as a senior research scientist.</i></p>
                                 </li>
-                                <li>
+                                <!--<li>
                                     <p style="font-family:Helvetica"><b>[Jun 30, 2017]:</b> <i>I finished my PhD studying at Wuhan University.</i></p>
-                                </li>
+                                </li>-->
                                 <li>
                                     <p style="font-family:Helvetica"><b>[Apr 15, 2017]:</b> <i>One paper is accepted to CVPR 2017.</i></p>
                                 </li>
@@ -127,7 +130,68 @@
             </table>
         </div>
 
-        <h1 style="font-size:24px">Selected Publications</h1>
+        <h1 style="font-size:24px">Selected Publications (<a href="https://scholar.google.com/citations?user=EBQuyRAAAAAJ&hl=en">Full List</a>)</h1>
+
+        <table class="imgtable">
+            <tbody>
+                <tr>
+                    <td width="21%<article>">
+                        <img src="./figures/eccv22_georefine.jpg" width="100%<article>">
+                    </td>
+                    <td align="left">
+                        <ul>
+                            <li>
+                                <h3 style="font-family:Helvetica">
+                                    <b>
+                                        GeoRefine: Self-Supervised Online Depth Refinement for Accurate Dense Mapping
+                                    </b>
+                                </h3>
+                                <p style="font-family:Helvetica">
+                                    Pan Ji<sup>*</sup>, <b>Qingan Yan<sup>*</sup></b>, Yuxin Ma, Yi Xu
+                                </p>
+                                <p style="font-family:Helvetica">
+                                    <i>European Conference on Computer Vision <b>(ECCV)</b>, 2022.</i>
+                                </p>
+                                <p style="padding-top:10px">
+                                    [<a href="https://arxiv.org/abs/2205.01656"><u>Paper</u></a>]&nbsp;
+                                </p>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <table class="imgtable">
+            <tbody>
+                <tr>
+                    <td width="21%<article>">
+                        <img src="./figures/tvcg22_point.jpg" width="100%<article>">
+                    </td>
+                    <td align="left">
+                        <ul>
+                            <li>
+                                <h3 style="font-family:Helvetica">
+                                    <b>
+                                        Point Cloud Completion via Skeleton-Detail Transformer
+                                    </b>
+                                </h3>
+                                <p style="font-family:Helvetica">
+                                    Wenxiao Zhang, Huajian Zhou, Zhen Dong, Jun Liu, <b>Qingan Yan</b>, Chunxia Xiao
+                                </p>
+                                <p style="font-family:Helvetica">
+                                    <i>IEEE Transactions on Visualization and Computer Graphics <b>(TVCG)</b>, 2022.</i>
+                                </p>
+                                <p style="padding-top:10px">
+                                    [<a href="https://ieeexplore.ieee.org/document/9804851"><u>Paper</u></a>]&nbsp;
+                                    [<a href="https://github.com/XLechter/SDT"><u>Code</u></a>]
+                                </p>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
 
         <table class="imgtable">
             <tbody>
@@ -763,7 +827,7 @@
 
         <div id="footer">
             <div id="footer-text">
-                <p style="font-family:Helvetica">Last updated on Jun 06, 2022 by Qingan Yan.</p>
+                <p style="font-family:Helvetica">Last updated on Jul 05, 2022 by Qingan Yan.</p>
             </div>
         </div>
     </div>
