--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                                 <b>Email:</b> yanqinganssg <i>at</i> gmail <i>dot</i> com<br>
                                 <b>Office:</b> 2479 E Bayshore Rd #110, Palo Alto, CA 94303<br>
                                 <b>Links:</b> <a href="https://github.com/yanqingan">GitHub</a> |
-                                <a href="https://www.linkedin.com/in/yanqingan">LinkedIn</a>
+                                <a href="https://www.linkedin.com/in/yanqingan">LinkedIn</a> |
+                                <a href="https://scholar.google.com/citations?user=EBQuyRAAAAAJ&hl=en">GoogleScholar</a>
                                 <br>
                             </span>
                         </p>
@@ -717,7 +718,7 @@
                                 <a href="https://mc.manuscriptcentral.com/tcsvt">TCSVT</a>,
                                 <a href="https://mc.manuscriptcentral.com/cyb-ieee">TCYB</a>,
                                 <a href="https://ees.elsevier.com/neucom/default.asp">Neurocomputing</a>,
-                                <a href="https://mc.manuscriptcentral.com/cpe">CPE</a>
+                                <a href="https://www.editorialmanager.com/pr/default1.aspx">PR</a>
                             </p>
                             <!--<ul>
                                 <li>
@@ -756,6 +757,7 @@
                                 ACCV,
                                 3DV,
                                 CRV,
+                                ICLR,
                                 AAAI,
                                 EG
                             </p>
@@ -827,7 +829,7 @@
 
         <div id="footer">
             <div id="footer-text">
-                <p style="font-family:Helvetica">Last updated on Jul 05, 2022 by Qingan Yan.</p>
+                <p style="font-family:Helvetica">Last updated on Sep 08, 2022 by Qingan Yan.</p>
             </div>
         </div>
     </div>
